FIX#16 100% causes wrapping with input-group

--- a/src/_typeahead_svelte.scss
+++ b/src/_typeahead_svelte.scss
@@ -20,7 +20,7 @@
 
 .ts-container {
   position: relative;
-  width: 100% !important;
+//  width: 100% !important;
   height: unset;
   border: 0;
   padding: 0;
